--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,24 +34,6 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Extract metadata for Docker (tags, labels)
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ghcr.io/${{ github.repository_owner }}/license-scan-export
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            # use docker tag 'latest' for the default branch (default is to only use it for the latest git tag)
-            type=raw,value=latest,enable={{is_default_branch}}
-          labels: |
-            org.opencontainers.image.created={{commit_date 'YYYY-MM-DDTHH:mm:ss.SSS[Z]'}}
-        env:
-          # otherwise labels are not shown on GitHub due to multi-arch image: https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-container-registry#adding-a-description-to-multi-arch-images
-          # https://github.com/docker/metadata-action#annotations
-          DOCKER_METADATA_ANNOTATIONS_LEVELS: manifest,index
-      -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -60,17 +42,12 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build and push
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v5
         with:
           context: .
-          build-args: |
-            COMMIT=${{ github.sha }}
-            BRANCH=${{ env.BRANCH }}
-            NOW=${{ env.NOW }}
           platforms: linux/amd64,linux/arm64 # ,linux/arm/v7
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          annotations: ${{ steps.meta.outputs.annotations }}
+          push: true
+          tags: |
+            ghcr.io/bitflow/license-scan-export:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
